fixed horizontal scroll bug

--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ list-style: none;
 		background-attachment: fixed;
 		background-color:rgba(46, 159, 177, 1);
 		font-size:16px;
+		overflow-x: hidden;
 	}
 	
 	body {
@@ -579,6 +580,8 @@ list-style: none;
 	  	transition:         all 600ms cubic-bezier(0.77, 0, 0.175, 1);
 	  	transform:translateX(0%);
 	}
+
+	/*need to make an inner and outer panel -> one can be fixed position for sidebar, but other will not be for transitions*/
 
 	.panel {
 		-webkit-transition: transform 600ms cubic-bezier(0.77, 0, 0.175, 1);
